Updated Viento and fixed song-grid layout bug on high resolutions

--- a/less/austin.less
+++ b/less/austin.less
@@ -148,7 +148,6 @@ body {
 }
 
 #feed {
-
     //CSS fixes for https://github.com/caseyscarborough/github-activity/ to look less buggy
 
     max-width: 400px;
@@ -177,30 +176,12 @@ body {
         max-width: 50%;
     }
 
-    // @media(max-width: 415px) {
-    //     .gha-activity.gha-small .gha-time {
-    //         margin-left: 50px;
-    //     }
-    // }
-
     .gha-push-small {
         display: none;
     }
 
     .gha-footer {
         display: none;
-        /*position: static;
-        text-align: center;
-        border-top: none;
-        border-bottom: 1px solid #ddd;
-        height: auto;
-        width: auto;
-
-        a {
-        float: none;
-        padding: 0;
-        }*/
-
     }
 
     .gha-feed {
@@ -272,7 +253,7 @@ body {
 }
 
 // Prevent odd-looking rows of music at large resolutions
-@media(min-width: 1450px) {
+@media(min-width: 1389px) {
     .music-container {
         .song-grid {
             width: 820px;
